Remove mustache.js

--- a/templates/index.html
+++ b/templates/index.html
@@ -7,7 +7,7 @@
   <body>
     <div id="app"></div>
     <script type="module">
-      window['__inga__'] = {{{.}}};
+      window['__inga__'] = {{report}};
     </script>
     <script type="module" src="./main.js"></script>
   </body>
