--- a/templates/index.html
+++ b/templates/index.html
@@ -7,7 +7,9 @@
   <body>
     <div id="app"></div>
     <script type="module">
-      window['__inga__'] = {{report}};
+      window['__inga_report__'] = {{report}};
+      window['__inga_repo_url__'] = '{{repoUrl}}';
+      window['__inga_head_sha__'] = '{{headSha}}';
     </script>
     <script type="module" src="./main.js"></script>
   </body>
