Add diff link to graph

--- a/templates/index.html
+++ b/templates/index.html
@@ -10,6 +10,7 @@
       window.inga_report = {{report}};
       window.inga_repo_url = '{{repoUrl}}';
       window.inga_head_sha = '{{headSha}}';
+      window.inga_pr_number = '{{prNumber}}';
     </script>
     <script type="module" src="./main.js"></script>
   </body>
