--- a/templates/index.html
+++ b/templates/index.html
@@ -3,6 +3,11 @@
   <head>
     <meta charset="UTF-8" />
     <title>Inga Report</title>
+    <style type="text/css">
+      html {
+        font-size: 13px
+      }
+    </style>
   </head>
   <body>
     <div id="app"></div>
